# BebopDroneController

./: CMakeLists.txt  LICENSE
bebopDroneController/: CMakeLists.txt  bebop.sdp  config.h  main.c
bebopDroneController/utilities/: parrot.h  utilities.c
controller/: CMakeLists.txt  droneCommandHandler.c  droneCommandHandler.h  droneHandshake.c  droneHandshake.h
socklib/: tcpClientSocket.c  udpClientSocket  udpServerSocket.c
